--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,11 @@ img {
   padding-left: 20px;
 }
 
+.movies-title-top{
+  color: #fff;
+  margin: 0;
+}
+
 ul,ol,li{
   padding: 0;
   margin: 0;
@@ -62,7 +67,7 @@ a{
   text-decoration: none;
 }
 
-img{
+.movies-img{
   width: 100%;
   height: 350px;
 }
@@ -97,7 +102,7 @@ img{
   text-decoration: underline;
   margin-right: auto;
   cursor: pointer;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .genres-box{
@@ -105,5 +110,15 @@ img{
   border: 2px solid darkslategray;
   padding: 5px 10px;
   border-radius: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+}
+
+.movies-modal-img{
+  width: 400px;
+  height: 550px;
+  border-radius: 10px;
+}
+
+.movies-title-modal{
+  color: #000;
 }
